@@ -23,6 +23,13 @@
 # disposed of as quickly as possible.
 #store_clean_interval 10
 
+# Memory usage will be monitored to check the broker never exceed
+# this limit. Defaults to 0. (No maximum) In case the limit have
+# been reached, the broker will stop accepting new messages.
+# Mosquitto needs to be compiled with memory tracking support in
+# order to use this option. If not, it will be ignored.
+#total_memory_limit_bytes 0
+
 # Write process id to a file. Default is a blank string which means 
 # a pid file shouldn't be written.
 # This should be set to /var/run/mosquitto.pid if mosquitto is
